Readability Fix/Notes Added

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,7 @@ body {
   
   
   nav a {
-      background-color: blue;
+      background-color: rgb(0, 204, 255);
       border-radius:2px;
       border:none;
       color: black;
@@ -44,7 +44,7 @@ body {
   }
   
   #submit_button {
-      background-color: blue;
+      background-color: rgb(0, 204, 255);
       border-radius:2px;
       border:none;
       color: black;
